- Melhoria na arte e refatoração da janela de fabricação